tests/ui/dropck/drop-on-non-struct.stderr
error[E0412]: cannot find type `Nonexistent` in this scope
  --> $DIR/drop-on-non-struct.rs:8:15
   |
LL | impl Drop for Nonexistent {
   |               ^^^^^^^^^^^ not found in this scope

error[E0120]: the `Drop` trait may only be implemented for local structs, enums, and unions
  --> $DIR/drop-on-non-struct.rs:1:19
   |
LL | impl<'a> Drop for &'a mut isize {
   |                   ^^^^^^^^^^^^^ must be a struct, enum, or union in the current crate

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0120, E0412.
For more information about an error, try `rustc --explain E0120`.
